--- a/seminar_7/tobbszoros regresszio.Rmd
+++ b/seminar_7/tobbszoros regresszio.Rmd
@@ -3,13 +3,13 @@ title: "Exercise 12 - Multiple regression"
 author: "Zoltan Kekecs"
 date: "20 november 2018"
 output:
-  word_document:
+  html_document:
+    number_sections: yes
     toc: yes
   pdf_document:
     number_sections: yes
     toc: yes
-  html_document:
-    number_sections: yes
+  word_document:
     toc: yes
 ---
 
@@ -19,19 +19,19 @@ knitr::opts_chunk$set(echo = T, tidy.opts=list(width.cutoff=60), tidy=TRUE)
 
 \pagebreak
 
-# Abstract
+# Tobbszoros regresszio
+
+## Abstract
 
 Ennek a gyakorlatnak az a celja hogy az egyszeru regressziorol szerzett tudast altalanositsuk olyan esetekre, ahol tobb prediktor (bejoslo valtozo) is szerepel a modellben.
 
 Ennek a dokumentumnak a legfrissebb valtozatat megtalalod itt:
+https://osf.io/e23by/
 
 
+## Package-ek betoltese
 
-# Data management and descriptive statistics
-
-## Loading packages
-
-You will need to load the following packages for this exercise:
+A kovetkezo package-ek betoltesere lesz szukseg:
 
 ```{r packages, message=FALSE}
 library(psych) # for describe
@@ -39,115 +39,178 @@ library(lm.beta) # for lm.beta
 library(car) # for scatter3d
 library(ggplot2) # for ggplot
 library(rgl) # for scatter3d
+library(tidyverse) # for tidy format
+library(gridExtra) # for grid.arrange
 ```
 
 
+## Az adatfajl betoltese: Lakasarak adattabla
 
-## Load data about housing prices in King County, USA 
+Ebben a gyakorlatban lakasok es hazak arait fogjuk megbecsulni.
 
-In this exercise we will predict the price of apartments and houses. 
+Egy Kaggle-rol szarmazo adatbazist hasznalunk, melyben olyan adatok szerepelnek, melyeket valoszinusithetoen alkalmasak lakasok aranak bejoslasara. Az adatbazisban az USA Kings County-bol szarmaznak az adatok (Seattle es kornyeke).
 
-We use a dataset from Kaggle containing data about housing prices and variables that may be used to predict housing prices. The data is about accomodations in King County, USA (Seattle and sorrounding area).
-
-We only use a portion of the full dataset now containing information about N = 200 accomodations.
-
-You can load the data with the following code
+Az adatbazisnak csak egy kis reszet hasznaljuk (N = 200).
 
 ```{r load data, message=FALSE}
 # data from github/kekecsz/PSYP13_Data_analysis_class-2018/master/data_house_small_sub.csv. 
-data_house = read.csv("https://bit.ly/2DpwKOr")
+data_house = read_csv("https://bit.ly/2DpwKOr")
 ```
 
-## Check the dataset
+## Adatellenoryes
 
-You should always check the dataset for coding errors or data that does not make sense.
+Mindig ellenorizd az adatok strukturajat es integritasat.
 
-View data in the data viewer tool 
-```{r view data, eval=FALSE}
-View(data_house)
+Eloszor at valtjuk a USA dollar-t millio forint mertekegysegre, es a negyzetlab adatokat negyzetmeterre.
+
+```{r view data}
+data_house %>% 
+  summary()
+
+data_house = data_house %>% 
+  mutate(price_HUF = (price * 293.77)/1000000,
+         sqm_living = sqft_living * 0.09290304,
+         sqm_lot = sqft_lot * 0.09290304,
+         sqm_above = sqft_above * 0.09290304,
+         sqm_basement = sqft_basement * 0.09290304,
+         sqm_living15 = sqft_living15 * 0.09290304,
+         sqm_lot15 = sqft_lot15 * 0.09290304,
+         )
+
+
 ```
 
-Display simple descriptive statistics and plots.
 
-We are going to predict price of the apartment using the variables sqft_living (the square footage of the living area), and grade (overall grade given to the housing unit, based on King County grading system), so lets focus on these variables.
 
-Later we are also going to use a categorical variable, has_basement (whether the apartment has a basement or not) as well.
 
-```{r check data, eval = F}
+Egyszeru leiro statisztikak es abrak.
+
+Kezdetben a lakasok arat a **sqm_living** (a lakas lakoreszenek alapterulete negyzetmeterben), es a **grade** (a lakas altalanos  minositese a King County grading system szerint, ami a lakas minoseget, poziciojat, a haz minoseget stb. is tartalmazza) prediktorok felhasznalasaval josoljuk majd be. Kesobb a **has_basement** (tartozik-e a lakashoz pince) valtozot is hasznaljuk majd. Szoval fokuszaljuk ezekre az adatellenorzes soran.
+
+```{r check data}
+
+# leiro statiszikaka
 describe(data_house)
-hist(data_house$price, breaks = 30)
-hist(data_house$sqft_living, breaks = 30)
-hist(data_house$grade, breaks = 30)
+
+# hisztogramok
+data_house %>% 
+  ggplot() +
+  aes(x = price_HUF) +
+  geom_histogram( bins = 50)
+
+
+data_house %>% 
+  ggplot() +
+  aes(x = sqm_living) +
+  geom_histogram( bins = 50)
+
+data_house %>% 
+  ggplot() +
+  aes(x = grade) +
+  geom_bar() +
+  scale_x_continuous(breaks = 4:12)
+
 
 # scatterplot
-plot(price ~ sqft_living, data = data_house)
-plot(price ~ grade, data = data_house)
+data_house %>% 
+  ggplot() +
+  aes(x = sqm_living, y = price_HUF) +
+  geom_point()
 
+data_house %>% 
+  ggplot() +
+  aes(x = grade, y = price_HUF) +
+  geom_point()
+
+# leiro statisztika
 table(data_house$has_basement)
-plot(data_house$price ~ data_house$has_basement)
+
+# violin plot
+data_house %>% 
+  ggplot() +
+  aes(x = has_basement, y = price_HUF)+
+  geom_violin() +
+  geom_jitter()
+
 ```
 
-# Multiple regression
+## Tobbszoros regresszio
 
-## Fitting the regression model
+### A regresszios modell felepitese (fitting a regression model)
 
-We fit a regression model with multiple predictors: sqft_living and grade. In the formula, the predictors are separated by a + sign.
+A tobbszoros regresszios modellt ugyan ugy epeitjuk mint az egyszeru regresszios modellt, csak csak tobb prediktort is betehetunk a modellbe. Ezeket a prediktorvaltozokat + jellen valasztjuk el egymastol a regresszios formulaban.
+
+Alabb **price_HUF** a bejosolt valtozo, es a **sqm_living** es a **grade** a prediktorok.
 
 
 ```{r regression model}
-mod_house1 = lm(price ~ sqft_living + grade, data = data_house)
+mod_house1 = lm(price_HUF ~ sqm_living + grade, data = data_house)
 ```
 
-The regression equation is displayed just like in the case of simple regression
+A regresszios egyenletet a modell objektumon keresztul erhetjuk el:
 
 ```{r regression equation}
 mod_house1
 ```
 
 
-It is not trivial to visualize the regression equation in multiple regression. You can plot every simple regression separately, but that is not an accurate depiction of the prediction using the model.
+A tobbszoros regresszios modellek vizualizacioja nem olyan egyertelmu mint az egyszeru regresszios modelleke.
+
+Az egyik megoldas hogy a paronkenti osszefuggeseket vizualizaljuk egyenkent, de ez nem ragadja meg a modell tobbvaltozos jelleget.
 
 ```{r plot regression lines}
-plot(price ~ sqft_living, data = data_house)
-abline(lm(price ~ sqft_living, data = data_house))
-plot(price ~ grade, data = data_house)
-abline(lm(price ~ grade, data = data_house))
+# scatterplot
+plot1 = data_house %>% 
+  ggplot() +
+  aes(x = sqm_living, y = price_HUF) +
+  geom_point()+
+  geom_smooth(method = "lm")
+
+plot2 = data_house %>% 
+  ggplot() +
+  aes(x = grade, y = price_HUF) +
+  geom_point()+
+  geom_smooth(method = "lm")
+
+grid.arrange(plot1, plot2, nrow = 1)
 ```
 
-Alternatively, you can use a 3 dimensional plot to visualize the regression plane.
+Egy alternativa hogy egy haromdimenzios abran abrazoljuk a regresszios sikot.Bar ez szepen nez ki, de nem tul hasznos, es ez is csak ket prediktorvaltozoig mukodik, harom es tobb prediktor eseten mar egy tobbdimenzios terben kepzelheto csak el a regresszios felulet, ezert a vizualizaciora altalaban megis az paronkenti scatterplot-ot szoktuk hasznalni.
 
 ```{r plot regression plane, eval = F}
 # plot the regression plane (3D scatterplot with regression plane)
-# scatter3d(price ~ sqft_living + grade, data = data_house)
+scatter3d(price_HUF ~ sqm_living + grade, data = data_house)
 
 ```
 
-## Prediction
+### Becsles (prediction)
 
-Again, we can ask for predictions for specific values of predictors, but we need to specify all predictor values (in this case, both sqft_living and grade of the apartment) to get a prediction.
+Ugyan ugy ahogy az egyszeru regresszional, itt is kerhetjuk a prediktorok bizonyos uj ertekekeire a kimeneti valtozo ertekenek megbecsleset a predict() fuggveny segitsegevel.
 
-Remember that you need to provide the predictors in a dataframe with the predictors having the same variable name as in the model formula.
+Fontos, hogy a prediktorok ertekeit egy data.frame vagy tibble formatumban kell megadnunk, es a prediktorvaltozok valtozoneveinek meg kell egyeznie a regresszios modellben hasznalt valtozonevekkel.
 
 ```{r prediction for new data points}
-sqft_living = c(600, 600, 1100, 1100)
+sqm_living = c(60, 60, 100, 100)
 grade = c(6, 9, 6, 9)
-newdata_to_predict = as.data.frame(cbind(sqft_living, grade))
-predicted_price = predict(mod_house1, newdata = newdata_to_predict)
+newdata_to_predict = as.data.frame(cbind(sqm_living, grade))
+predicted_price_HUF = predict(mod_house1, newdata = newdata_to_predict)
 
-cbind(newdata_to_predict, predicted_price)
+cbind(newdata_to_predict, predicted_price_HUF)
 ```
 
-# What to report in a publication
+### Hogyan kozoljuk az eredmenyeinket egy kutatasi jelentesben
 
-In a publication (and in the home assignment) you will need to report the following information:
+Egy kutatsi jelentesben (pl. cikk, muhelymunka, ZH) a kovetkezo informaciokat kell leirni a regresszios modellrol:
 
-First of all, you will have to specify the regression model you built. For example: 
+Eloszor is le kell irni a regresszios modell tulajdonsagait (altalaban a "Modszerek" reszben):
 
-"In a linar regression model we predicted housing price (in USD) with square footage of living area (in ft) and King County housing grade as predictors."
+"Egy linearis regresszios modellt illesztettem, melyben a lakas arat (millio HUF-ban) a lakas lakoreszenek teruletevel (m^2-ben) es a lakas King County lakas-minosites ertekevel becsultem meg." 
 
-Next you will have to indicate the effectiveness of the model. You can do this by after a text summary of the results, giving information about the F-test of the whole model, specifically, the F value, the degrees of freedom (note that there are two degrees of freedom for the F test), and the p-value. You can find all this information in the model summary. Also provide information about the model fit using the adjusted R squared from the model summary and the AIC values provided by the AIC() function.
+"I built a linar regression model in which I predicted housing price (in million HUF) with the size of the living area (in m^2) and King County housing grade as predictors."
 
-Don't forget to use APA guidelines when determing how to report these statistics and how many decimal places to report (2 decimals for every number except for p values, which should be reported up to 3 decimals).
+Ezutan a teljes modell bejoslasi hatekonysagat kell jellemezni. Ezt a modellhez tartozo adjusted R^2 ertek (modositott R^2), es a modell-t a null-modellel osszehasonlito anova F-tesztjenek statiszikainak megadasaval szoktuk tenni (F-ertek, df, p-ertek). Mindezen informaciot a summary() funkcioval tudjuk lekerdezni. A modell illeszkedeset az AIC (Akaike information criterion) ertekkel is szoktuk jellemezni, amit az AIC() funcio ad meg.
+
+Az APA publikacios kezikonyv alapjan minden szamot ket tizedesjegy pontossaggal kell megadni, kiveve a p erteket, amit harom tizedesjegy pontossaggal.
 
 ```{r model summary}
 sm = summary(mod_house1)
@@ -156,20 +219,24 @@ sm
 AIC(mod_house1)
 ```
 
-"The multiple regression model was significantly better than the null model, explaining `r round(sm$adj.r.squared, 4)*100`% of the variance in housing price (F `r paste("(", round(sm$fstatistic[2]), ", ", round(sm$fstatistic[3]), ")", sep = "")` =  `r round(sm$fstatistic[1], 2)`, `r if(round(pf(sm$fstatistic[1],sm$fstatistic[2],sm$fstatistic[3],lower.tail=F), 3) == 0){"p < .001"} else {paste("p = ", round(pf(sm$fstatistic[1],sm$fstatistic[2],sm$fstatistic[3],lower.tail=F), 3), sep = ")")}`, Adj. R^2 = `r round(sm$adj.r.squared, 2)`, AIC = `r round(AIC(mod_house1), 2)`)."
+Vagyis az "Eredmenyek" reszben igy irnank a fenti pelda eredmenyeirol: 
 
+"A tobbszoros regresszios modell mely tartalmazta a lakoterulet es a lakas minosites prediktorokat hatekonyabban tudta bejosolni a lakas arat mint a null modell. A modell a lakasar varianciajanak `r round(sm$adj.r.squared, 4)*100`%-at magyarazta (F `r paste("(", round(sm$fstatistic[2]), ", ", round(sm$fstatistic[3]), ")", sep = "")` =  `r round(sm$fstatistic[1], 2)`, `r if(round(pf(sm$fstatistic[1],sm$fstatistic[2],sm$fstatistic[3],lower.tail=F), 3) == 0){"p < .001"} else {paste("p = ", round(pf(sm$fstatistic[1],sm$fstatistic[2],sm$fstatistic[3],lower.tail=F), 3), sep = ")")}`, Adj. R^2 = `r round(sm$adj.r.squared, 2)`, AIC = `r round(AIC(mod_house1), 2)`)."
 
-Furthermore, you will have to provide information about the regression equation and the predictors' added value to the model. You can do this by creating a table with the following information:
+Ezen felul meg kell adnunk a regresszios egyenletre es az egyes prediktorok becsleshez valo hozzajarulasara vontkozo adatokat. Ezt altalaban egy osszefoglalo tablazatban szoktuk megadni, melyben a kovetkezo adatok szerepelnek prediktoronkent:
 
-Regression coefficients with confidence intervals, and standardized beta values for each predictor, together with the p-values of the t-test.
+- regresszios egyutthato (regression coefficients, estimates) - summary()
+- az egyutthatokhoz tartozo konfidencia intervallum (coefficient confidence intervals) - confint()
+- standard beta ertekek (standardized beta values) - lm.beta() az lm.beta pakcage-ben
+- a t-teszthez tartozo p-ertek (p-values of the t-test) -summary()
 
-The regression coefficients and p-values can be found in the model summary, and the confidence interavlas and std. betas can be computed by applying the confint() and lm.beta() functions on the model object. (the lm.beta package is needed for the lm.beta() function)
 ```{r coef functions, eval = F}
+
 confint(mod_house1)
 lm.beta(mod_house1)
 ```
 
-The final table should look something like this:
+A vegso tablazat valahogy igy nez majd ki:
 
 ```{r coef table, echo = F}
 sm_p_values = as.character(round(sm$coefficients[,4], 3))
@@ -184,82 +251,26 @@ sm_table["(Intercept)","Std.Beta"] = "0"
 
 ```{r APA table, echo=F}
 sm_table
+round(sm_table["sqm_living","b"], 2)
 ```
 
-You should refer to your course book (Chapter 15 - Navarro D. (2015). Learning statistics with R: A tutorial for psychology students and other beginners (5th ed.). http://www.compcogscisydney.com/learning-statistics-with-r.html) for the interpretation of the data reported above.
+### regresszios eghyutthato ertelmezese
 
+A regresszios egyutthatot ugy lehet ertelmezni, hogy a prediktor ertekenek egy ponttal valo novekedese eseten a kimeneti valtozo erteke ennyivel valtozik. Pl. ha a sqm_living-hez tartozo regresszios egyutthato `r round(sm_table["sqm_living","b"], 2)`, az azt jelenti hogy minden egyes ujabb negyzetmeter teruletnovekedes `r round(sm_table["sqm_living","b"], 2)` millio forint arvaltozassal jar.
 
-# Build better models
+### standard beta ertelmezese
 
-Experiment with different models based on your theories about what could influence housing prices.
+A regresszios egyutthato elonye, hogy a kimeneti valtozo mertekegysegeben van, es nagyon egyszeru ertelemzni. Ezert ez egy "nyers" hatasmeret mutato. Viszont a hatranya hogy az erteke a hozza tartozo prediktor valtozo skalajan mozog. Ez azt jelenti, hogy az egyes egyutthato ertekek nem konnyen osszehasonlithatoak, mert a prediktorok mas skalan mozognak. Pl. az sqm_living egyutthatoja alacsonyabb mint az grade egyutthatoja, de ez onmagaban nem mond arrol semmit, hogy melyik prediktornak van nagyobb szerepe a kimeneti valtozo bejoslasaban, mert a sqm_living skalaja sokkal kiterjedtebb (50-400 m^2) mint a grade skalaja (5-11).
 
-Try to increase the adjusted R^2 above 52%.
-If you want to get access to the whole dataset or get ideas on which model works best, go to Kaggle, check out the top kernels, and download the data.
-https://www.kaggle.com/harlfoxem/housesalesprediction/activity
+Ahhoz hogy ossze tudjuk hasonlitani az egyes prediktorok becsleshez hozzaadott erteket, a ket egyutthatot ugyan arra a skalara kell helyeznunk, amit standardizalassal erhetunk el. A standard Beta egy ilyen standardizalt mutato. Ez mar direkt modon osszehasonlithato a prediktorok kozott. Ebbol mar latszik hogy a sqm_living hozzaadott erteke a price_HUF bejoslasahoz nagyobb mint a grade hozzaadott erteke.
 
+Amikor tobb prediktor van, ez nem feltetlenul jelenti azt, hogy ha egyenkent megneznenk a prediktorok korrelaciojat a kimeneti valtozoval, akkor ugyan ilyen osszefuggest kapnank. Ez az egyutthato es a std.Beta ertek a prediktor egesz modellben betoltott szerepet  jeloli, a tobbi prediktor bejoslo erejenek leszamitasaval. Vagyis elkepzelheto, hogy egy prediktor onmagaban jobban korrelal a kimeneti valtozoval mint barmelyik masik prediktor, viszont a modellben kisebb szerepet jatszik, mert a tobbi prediktor ugyan azt a reszet magyarazza a kimeneti valtozo varianciajanak, mint ez a prediktor.
 
-## Categorical predictor
+**______Gyakorlas_______**
 
-Categorical variables can be included in models just like continuous variables. Here, we include the variable has_basement as a predictor, which is a categorical variable that has two levels: 'has basement' and 'no basement'. In this case, the intercept can be interpreted as the predicted value for all continuous predictor values as 0, and the has_basement variable at its default level: 'has basement'. The regression coefficient for has_basement indicates how much price is predicted to change if the apartment has no basement compared to if it has basement.
+1. Epits egy tobbszoros linearis regresszio modellt az lm() fugvennyel amiben az **price_HUF** a kimeneti valtozot becsuljuk meg. Hasznalhatod a **data_house** adatbazisban szereplo barmelyik valtozot felhasznalhatod a modellben, ami szerinted realisan hozzajarulhat a lakas aranak meghatarozasahoz.
+2. Hatarozd meg, hogy szignifikansan jobb-e a modelled mint a null modell (a teljese modell F-teszthez tartozo p-ertek alapjan)?
+3. Mekkora a teljes modell altal bejosolt varianciaarany (adj.R^2)?
+4. Melyik az a prediktor, mely a legnagyobb hozzadaott ertekkel bir a becslesben?
 
-```{r categorical predictor}
-mod_cat = lm(price ~ sqft_living + grade + has_basement, data = data_house)
-
-summary(mod_cat)
-```
-
-
-The default level (reference level) of categorical variables is the level earliest in the alphabet. For this reason, the reference level of the variable has_basement is "has basement". For more intuitive interpretation, it would make sense to change the reference level to "no basement", so that the model coefficient for this variable would be positive, and it would indicate how much price increase would a basement mean for the apartment sales.
-
-This can be done with the relevel() function. We have to re-run the model for this change to take effect in the model object.
-
-
-```{r relevel}
-data_house$has_basement = relevel(data_house$has_basement, ref = "no basement")
-
-mod_cat = lm(price ~ sqft_living + grade + has_basement, data = data_house)
-summary(mod_cat)
-```
-
-Now it is apparent from the model summary that if an apartment has a basement, this means a `r  format(round(coef(mod_cat)["has_basementhas basement"]), digits = 2)` USD increase in price compared to apartments which do not have a basement (the reference level).
-
-## Higher order terms
-
-If you suspect that there is non-linear relationship between the outcome and some predictor, you can try to include a second or third order term.
-
-For example, here we can see that the relationship of price and grade is not entirely linear.
-
-```{r nonlinear relationship plot}
-plot(price ~ grade, data = data_house)
-```
-
-So we build a model including the second order term of grade, to account for a quadratic relationsip.
-
-Unless you know what you are doing, always add the first order term in the model as well, like here:
-
-```{r higher order terms}
-mod_house_quad <- lm(price ~ grade + I(grade^2), data = data_house)
-summary(mod_house_quad)
-
-ggplot(data_house, aes(x = grade, y = price))+
-  geom_point()+
-  geom_smooth(method='lm',formula=y~x+I(x^2))
-```
-
-## Interactions
-
-A relationship of different predictors can also be modelled, if you suspect that the association of a predictor and the outcome might depend on the value of another predictor.
-
-For example here we first build a model where we include the effect of geographic location (longitude and latitude) in the model (mod_house_geolocation), and next, we include the interaction of longitude and latitude in the model, because we suspect that these parameters might influence each others association with price.
-
-```{r interaction term}
-mod_house_geolocation = lm(price ~ sqft_living + grade + long + lat, data = data_house)
-summary(mod_house_geolocation)
-
-mod_house_geolocation_inter2 = lm(price ~ sqft_living + grade + long * lat, data = data_house)
-summary(mod_house_geolocation_inter2)
-```
-
-Note that the adjusted R squared did not increase substancially due to the inclusion of the interaction term, so it might not be so useful to take into account the interaction, it might be enoug to take into account the main effects of longitude and latitude. This needs to be further evaluated with model comparison. See the exercise related to that.
-
-
+**________________________**
